--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        Hola mi nombre es Maritza, sigueme en mis redes sociales.
+        Hola Amigos es Maritza, sigueme en mis redes sociales.
     </p>
     
 </body>
